--- a/TwoWaySynonyms/TwoWaySynonyms.csproj
+++ b/TwoWaySynonyms/TwoWaySynonyms.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\TwoWaySynonyms.DataAccess\TwoWaySynonyms.DataAccess.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
