--- a/TwoWaySynonyms.DataAccess/TwoWaySynonyms.DataAccess.csproj
+++ b/TwoWaySynonyms.DataAccess/TwoWaySynonyms.DataAccess.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\TwoWaySynonyms.Models\TwoWaySynonyms.Models.csproj" />
   </ItemGroup>
 
 </Project>
